log
Thu 05 Oct 2023 12:16:35 AM UTC: 
 sudoku.c | 64 ++++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 54 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:88:7: error: unused variable ‘count’ [-Werror=unused-variable]
   88 |   int count = 0;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
c81aaa1
Thu 05 Oct 2023 12:16:50 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
db29a57
Thu 05 Oct 2023 12:22:18 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
eb03ceb
Thu 05 Oct 2023 12:53:58 AM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
48a9966
Thu 05 Oct 2023 12:54:16 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
4bdf776
Thu 05 Oct 2023 05:34:26 PM UTC: 
 sudoku.c | 29 ++++++-----------------------
 1 file changed, 6 insertions(+), 23 deletions(-)
 tests:  5|3
total_score: 35/70
53f08e8
Thu 05 Oct 2023 05:51:42 PM UTC: 
 sudoku.c | 32 +++++++++++++++++++++++++-------
 1 file changed, 25 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:117:11: error: unused variable ‘more_adj_nodes’ [-Werror=unused-variable]
  117 |     List *more_adj_nodes = get_adj_nodes(n);
      |           ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1297ead
Thu 05 Oct 2023 05:53:56 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  6|2
total_score: 45/70
80c5e03
